<resources>
    <string name="app_name">Biologer Otis</string>
    <string name="username">Username (email)</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="valid_email">Email is mistyped</string>
    <string name="valid_pass">No password provided</string>
    <string name="wrong_creds">Wrong email or password</string>
    <string name="nemas_nalog">Don\'t have an account?</string>
    <string name="napravi_nalog">Register</string>
    <string name="zaboravljena_lozinka">Forgot password?</string>
    <string name="email_wrong_format">Wrong email format</string>
    <string name="devDatabase">This is only for developers!</string>
    <string name="observer_coordinates">Observer coordinates:</string>
    <string name="specimen_coordinates">Specimen coordinates:</string>
    <string name="GPSaccuracy">Coordinate accuracy:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="not_available">unknown</string>
    <string name="unknown">unavailable</string>
    <string name="taxon_hint">Start typing…</string>
    <string name="more">More…</string>
    <string name="naziv_taksona">Taxon name</string>
    <string name="pleaseSelect">Please select</string>
    <string name="broj_jedinki">Number of individuals</string>
    <string name="pol">Sex</string>
    <string name="M">Male</string>
    <string name="Z">Female</string>
    <string name="razvojni_stadijum">Stage</string>
    <string name="stage_hint">Developemental stage of the taxon</string>
    <string name="jedinka_je">Found dead?</string>
    <string name="ziva">live</string>
    <string name="mrtva">dead</string>
    <string name="razlog_smrti">Cause of death</string>
    <string name="observation_length">Observation lenght</string>
    <string name="habitat">Habitat</string>
    <string name="komentar">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="sacuvaj">Save</string>
    <string name="title_activity_map">Map</string>
    <string name="entry_title">Data entry</string>
    <string name="taxa_mandatory">You must enter the valid taxon name.</string>
    <string name="please_select">Please select</string>
    <string name="enable_location">Location setting must be enabled on your device.</string>
    <string name="enable_location_yes">Enable</string>
    <string name="enable_location_no">Cancel</string>
    <string name="saved">The entry is saved.</string>
    <string name="location_is_zero">Location is not retrived yet. Would you like to wait for location or cancel this entry?</string>
    <string name="wait">Wait</string>
    <string name="choose_picture">Choose picture</string>
    <string name="choose_picture_gallery">Choose from gallery</string>
    <string name="choose_picture_camera">Take photo by camera</string>
    <string name="accurcy">Location precision (m)</string>
    <string name="confirmExit">Do you want to exit application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="updating_database">Updating taxonomic database…</string>
    <string name="new_database_available">New version of taxonomic database is available online. You can update it now or later from the application Setup. Would you like to update your database?</string>
    <string name="gps_update"><b>Warning:</b> You are about to overwrite original location with your current location! Are you sure?</string>
    <string name="logout_btn">Logout</string>
    <string name="setup">Setup</string>
    <string name="about">About Biologer</string>
    <string name="about_us">About us</string>
    <string name="list">List of findings</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="help">Help</string>
    <string name="textAbout">Biologer is an Open Source application issued under MIT license and designed to collect data on biodiversity in Eastern Europe.</string>
    <string name="textAbout1">Biologer was developed with funds from Rufford Small Grants (project Nos. 20507-B and 24652-B) and MAVA (project No. 15097).</string>
    <string name="version">Version: </string>
    <string name="textAbout2">To find out more details about Biologer, visit our web page: </string>
    <string name="currently_logged_data">You are currently logged into a database:</string>
    <string name="currently_logged_uname">Као user:</string>
    <string name="realy">Do you want to logout from this Biologer database?</string>
    <string name="note">Here you can update the list of taxa.</string>
    <string name="button_update">Update taxa</string>
    <string name="database_updated">Taxon database is updated.</string>
    <string name="database_connect_error">Application was unable to connect with database!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Slide1_title">Database options</string>
    <string name="first_slide">Biologer appliation can connect to multiple databases. You should start by choosing your preferred database and registering online.</string>
    <string name="Slide2_title">Navigation is easy</string>
    <string name="second_slide">Side panel provides all the shortcuts and settings you need. Just swipe the screen to the right and you are ready to go.</string>
    <string name="Slide3_title">The main screen</string>
    <string name="third_slide">From the main screen you can add, edit or delete your observations and send the data to one of our servers.</string>
    <string name="Slide4_title">New observations</string>
    <string name="fourth_slide">Adding data is easy! Suggest the species, add some photos and Biologer will do the rest. Advanced options can also be unlocked from the Preferences.</string>
    <string name="unprecise_coordinates">The coordate precision is less than 25 m. Would you like to wait for precise location?</string>
    <string name="save_anyway">Save anyway</string>
    <string name="database_empty">Biologer’s taxa database is not downloaded from the server yet. Ensure that you have a stabile internet connection to continue.</string>
    <string name="contin">Download</string>
    <string name="skip">Skip for now</string>
    <string name="google_maps_title">Google Map</string>
    <string name="select_map_type">Select map type</string>
    <string name="you_are_here">You are here!</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="sattelite">Satellite</string>
    <string name="title_setup_activity">Biologer Setup</string>
    <string name="license10">Free</string>
    <string name="license_default">Get from server</string>
    <string name="license20">Free, noncomertial</string>
    <string name="license30">Partially open</string>
    <string name="license40">Closed</string>
    <string name="setup_title">Setup Biologer</string>
    <string name="choose_dlicense">Choose different license for your data collected through the application</string>
    <string name="choose_ilicense">Choose different license for your images sent through the application</string>
    <string name="choose_project">Sets the project title if your data was collected during a project.</string>
    <string name="project_name">Project name</string>
    <string name="license_public">Publish instantly</string>
    <string name="license_timed">Publish in 3 years</string>
    <string name="channel_description">Displays notifications related with taxonomic updates.</string>
    <string name="channel_name">Update taxa</string>
    <string name="notify_title_taxa">Updating taxa</string>
    <string name="notify_desc_taxa">Downloading new taxonomic database.</string>
    <string name="notify_title_taxa_updated">Up to date</string>
    <string name="notify_desc_taxa_updated">Taxonomic database is now updated.</string>
    <string name="notify_title_taxa_failed">Update failed</string>
    <string name="notify_desc_taxa_failed">Taxonomic database was not updated from the server. Ensure that you have a stabile internet connection and retry.</string>
    <string name="retry">Retry</string>
    <string name="OK">OK</string>
    <string name="exit_application">After logging out from Biologer you can start the application again and log back into some of our online databases.</string>
    <string name="user_is_logged_out">It looks like no user is currently logged in. Biologer will now exit allowing you to restart the application and log back in.</string>
    <string name="should_cancel_taxa_update">Biologer is currently updating taxonomic database. Would you like to cancel this operation?</string>
    <string name="continue_update">Continua updating</string>
    <string name="notify_title_taxa_partially_updated">Taxa partially updated</string>
    <string name="notify_desc_taxa_partially_updated">Taxonomic tree is partially updated. To get full options from this application ou can complete updating from Biologer Preferences.</string>
    <string name="stop_action">Stop</string>
    <string name="resume_action">Resume</string>
    <string name="cancel_update">Cancel update</string>
    <string name="data_license">Data license</string>
    <string name="data_sharing">Data sharing</string>
    <string name="image_license">Image license</string>
    <string name="retry_licence_from_server">Biologer could not retrive data about your image and data licences from server. Having stable internet you can retry this operation, or you can setup custom data licenses from the Biologer Preferences.</string>
    <string name="go_to_preferences">Open preferences</string>
    <string name="update_taxa">Update taxa</string>
    <string name="update_taxa_desc">Updates taxonomic tree in your application from Biologer server.</string>
    <string name="data_synchronisation">Data synchronisation</string>
    <string name="additional_options">Additional options</string>
    <string name="updating_taxa_be_patient">Updating taxonomic database from the server. Please be patient.</string>
    <string name="pause_action">Pause</string>
    <string name="notify_title_taxa_paused">Update paused</string>
    <string name="notify_desc_taxa_paused">Downloading new taxonomic database from the server is paused.</string>
    <string name="notify_title_taxa_canceled">Update canceled</string>
    <string name="notify_desc_taxa_canceled">Downloading new taxonomic database is canceled by the user.</string>
    <string name="invalid_taxon_name">It looks like you selected an unknown taxon. Do you wont biologer to save this taxon anyway?</string>
    <string name="image_frame">Image frame</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="map">Map</string>
    <string name="advanced_entry">Advanced observation entry</string>
    <string name="advanced_entry_desc">Enables advanced options that could be entered with your occurrence (i.e. number of individuals, stage, sex).</string>
    <string name="select_sex">Sex of the individual</string>
    <string name="stage_egg">Egg</string>
    <string name="stage_larva">Larva</string>
    <string name="stage_pupa">Pupa</string>
    <string name="stage_adult">Adult</string>
    <string name="Biologer">Biologer</string>
    <string name="logging_in">Logging in…</string>
    <string name="cannot_connect_token">Cannot get response (token) from the server. Check the internet connection.</string>
    <string name="database">Database</string>
    <string name="User">User</string>
    <string name="stage_juvenile">Juvenile</string>
</resources>