<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:title="@string/list"
            android:icon="@drawable/ic_list"/>
        <item
            android:id="@+id/nav_setup"
            android:title="@string/setup"
            android:icon="@drawable/ic_settings_black_24dp"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout_btn"
            android:icon="@drawable/ic_logout"/>
    </group>
    <!--<item android:title="About">-->
    <item
        android:title="@string/about_us">
        <menu>
        <item
            android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/ic_about"/>
            <item
                android:id="@+id/nav_help"
                android:title="@string/help"
                android:icon="@drawable/ic_help_outline_black_24dp"/>
        </menu>
    </item>
</menu>