<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:src="@drawable/banner"
            android:contentDescription="@string/Biologer"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"/>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/database"
                    android:src="@mipmap/database_round" />

                <Spinner
                    android:id="@+id/spinner_databases"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:paddingStart="4dp"
                    android:paddingEnd="0dp"
                    android:layout_gravity="center">
                </Spinner>
            </LinearLayout>

            <View
                android:id="@+id/underline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="52dp"
                android:layout_marginEnd="4dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/tv_devDatabase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingStart="60dp"
                android:paddingEnd="12dp"
                android:text=""
                android:textColor="@color/warningRed"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/User"
                    android:src="@mipmap/user_round" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColorLink="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_wrongEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingStart="60dp"
                android:paddingEnd="12dp"
                android:text=""
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/password"
                    android:src="@mipmap/user_round" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textSize="16sp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_wrongPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingStart="60dp"
                android:paddingEnd="12dp"
                android:text=""
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@drawable/roundshapebtn"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/nemas_nalog"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/ctv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/napravi_nalog"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>

            <TextView
                android:id="@+id/ctv_forgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="14dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/zaboravljena_lozinka"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
