<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SetupActivity"
    tools:showIn="@layout/activity_setup">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical"
        android:paddingTop="0dp">

        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progress_bar_taxa"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryLight"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_gravity="start"
            android:text="@string/choose_dlicense" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinner_data_license">
        </android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_gravity="start"
            android:text="@string/choose_ilicense" />

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinner_image_license">
        </android.support.v7.widget.AppCompatSpinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/note" />

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/roundshapebtn"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/button_update" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>