<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="org.biologer.biologer.LogoutFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/currently_logged_data"/>

        <TextView
            android:id="@+id/currentDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:text=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/currently_logged_uname"/>

        <TextView
            android:id="@+id/tv_currentlyLogged_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_currentlyLogged_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/realy"
            android:layout_marginBottom="24dp"
            android:gravity="center"/>

        <org.biologer.biologer.CustomButton
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/logout_btn"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:background="@drawable/roundshapebtn"
            android:clickable="true"
            android:focusable="true"

            />

        <!--<TextView-->
            <!--android:id="@+id/tv_user"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="username"-->
            <!--android:gravity="center"/>-->
    </LinearLayout>


</FrameLayout>
